Isotope finder benchmark for proteins, polyhalogenated, small mol